# AnyMind-Test-Task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: lint.yml  tests.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_change_payment_method_type_to_string.py
app/: __init__.py  config.py  database.py  main.py
app/graphql/: __init__.py  mutations.py  queries.py  schema.py  types.py
app/models/: __init__.py  payment.py
app/payment_methods/: __init__.py  base.py  factory.py  methods.py
app/services/: __init__.py  payment_service.py
tests/: __init__.py  conftest.py  docker-compose.test.yml  test_graphql.py  test_payment_methods.py
